--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,29 +28,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # Arch
-  get_it: ^5.0.6
-  flutter_bloc: ^6.1.1
+  get_it: ^7.1.3
+  flutter_bloc: ^7.0.1
   dartz: ^0.9.2
-  equatable: ^1.2.5
-  supercharged: ^1.12.0
+  equatable: ^2.0.2
+  supercharged: ^2.0.0
   # Net
-  http: ^0.12.2
+  http: ^0.13.3
   data_connection_checker: ^0.3.4
   # Local
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
   # UI Components
-  cupertino_icons: ^1.0.0
-  ionicons: ^0.1.1
-  flutter_spinkit: ^4.1.2+1
-  google_fonts: ^1.1.2
-  simple_animations: ^2.5.0
+  cupertino_icons: ^1.0.3
+  ionicons: ^0.1.2
+  flutter_spinkit: ^5.0.0
+  google_fonts: ^2.1.0
+  simple_animations: ^3.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  bloc_test: ^7.1.0
-  mockito: ^4.1.4
+  bloc_test: ^8.0.2
+  mockito: ^5.0.10
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
