--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: numberia
-description: Simple help to comprehend Clean Arch and TDD
+description: Almost everything about numbers
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -28,22 +28,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # Arch
+  get: ^4.1.4
+  flutter_hooks: ^0.17.0
   get_it: ^7.1.3
   flutter_bloc: ^7.0.1
-  dartz: ^0.9.2
-  equatable: ^2.0.2
+  dartz: ^0.10.0-nullsafety.2
+  equatable: ^2.0.3
   supercharged: ^2.0.0
   # Net
   http: ^0.13.3
-  data_connection_checker: ^0.3.4
   # Local
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   # UI Components
   cupertino_icons: ^1.0.3
   ionicons: ^0.1.2
+  fluentui_system_icons: ^1.1.131
   flutter_spinkit: ^5.0.0
   google_fonts: ^2.1.0
+  animations: ^2.0.0
   simple_animations: ^3.1.1
 
 dev_dependencies:
